src/objects/Partner_Profile_PC__c.object
<CustomObject>
    <fields>
        <fullName>Primary_Executive_Sponsor_State_Province__c</fullName>
        <label>Primary CxO State/Province</label>
        <picklist>
            <controllingField>Primary_Executive_Sponsor_Country__c</controllingField>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Executive_Sponsor_Title__c</fullName>
        <label>Primary CxO Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Motorola_Contact_First_Name__c</fullName>
        <label>Primary Motorola Contact First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Motorola_Contact_Last_Name__c</fullName>
        <label>Primary Motorola Contact Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Segment_Revenue__c</fullName>
        <label>Primary Segment Revenue</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Primary_Solution__c</fullName>
        <label>Primary Solution</label>
        <picklist>
            <picklistValues>
                <fullName>Autonomous Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campus Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citizen Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection and Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Command and Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected First Responder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected Government Service Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected Guest and Self-Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected Shopper and Self-Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected Soldier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected Traveler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Facing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Device and Asset Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatch and Workflow Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medical Safety and Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Asset Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Communications and Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Accountability and Credentialing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Responder Life Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Management and Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front Line Command</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guest Wi-Fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health, Human and Social Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Wireless Comms Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intelligent Transportation System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Safety</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Primary_Supervertical__c</fullName>
        <label>Primary Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy and Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Government Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecom and Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation and Logistics</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profile_Status__c</fullName>
        <label>Profile_Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transition Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_Level_Helpdesk_calls__c</fullName>
        <label>Response Level Helpdesk calls</label>
        <picklist>
            <picklistValues>
                <fullName>Guaranteed response in 1-8 Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guaranteed response in 8-12 Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guaranteed response in 12-24 Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guaranteed response greater than 24 Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No guaranteed service response level</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revenue_Customer_Service__c</fullName>
        <label>% Revenue Customer Service</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Hardware__c</fullName>
        <label>% Revenue Hardware Sales</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Professional_Sales__c</fullName>
        <label>% Revenue Professional Sales</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Software__c</fullName>
        <label>% Revenue Software Sales</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Contact_Address_1__c</fullName>
        <label>Primary Sales Contact Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Contact_Address_2__c</fullName>
        <label>Primary Sales Contact Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Contact_City_Town__c</fullName>
        <label>Primary Sales Contact City / Town</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Contact_Country__c</fullName>
        <label>Primary Sales Contact Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Contact_Email__c</fullName>
        <label>Primary Sales Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Contact_First_Name__c</fullName>
        <label>Primary Sales Contact First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Contact_Last_Name__c</fullName>
        <label>Primary Sales Contact Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Contact_Phone__c</fullName>
        <label>Primary Sales Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sales_Contact_Postal_Code__c</fullName>
        <label>Primary Sales Contact Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Contact_State_Province__c</fullName>
        <label>Primary Sales Contact State/Province</label>
        <picklist>
            <controllingField>Sales_Contact_Country__c</controllingField>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Contact_Title__c</fullName>
        <label>Primary Sales Contact Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Last_FY_Auto_E_Com_Orders__c</fullName>
        <label>Percentage Revenue Internet Only Sales</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Last_FY_Field_Sales__c</fullName>
        <label>Percentage Revenue Face to Face Sales</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Last_FY_Online_Print_Catalogs__c</fullName>
        <label>Percentage Revenue Internet-Human Sales</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Last_FY_Phone_Consultant_Sales__c</fullName>
        <label>Percentage Revenue Telephone Based Sales</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_to_Business_Govt_Entities__c</fullName>
        <label>Percentage Sales To Government</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_to_Consumers__c</fullName>
        <label>% Sales to Consumers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sells_LAN_Solutions_to_Following__c</fullName>
        <label>Competitor LAN Solution Sales</label>
        <picklist>
            <picklistValues>
                <fullName>3Com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Voice Corp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcatel- Lucent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Altitude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASPECT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avaya (Direct/Partner) Bea Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ericsson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fujitsu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genesys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hitachi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huawei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intervoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melita</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nortel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panasonic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polycom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rockwell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samsung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shoretel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toshiba</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sells_Voice_Solutions_to_Following__c</fullName>
        <label>Competitor Voice Solution Sales</label>
        <picklist>
            <picklistValues>
                <fullName>3Com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Voice Corp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcatel- Lucent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Altitude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASPECT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avaya (Direct/Partner) Bea Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ericsson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fujitsu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genesys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hitachi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huawei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intervoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melita</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nortel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Voice Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panasonic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polycom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rockwell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samsung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shoretel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Services_Contact_Address_1__c</fullName>
        <label>Primary Services Contact Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Contact_Address_2__c</fullName>
        <label>Primary Services Contact Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Contact_City_Town__c</fullName>
        <label>Primary Services Contact City / Town</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Contact_Country__c</fullName>
        <label>Primary Services Contact Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Services_Contact_Email__c</fullName>
        <label>Primary Services Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Services_Contact_First_Name__c</fullName>
        <label>Primary Services Contact First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Contact_Last_Name__c</fullName>
        <label>Primary Services Contact Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Contact_Phone__c</fullName>
        <label>Primary Services Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Services_Contact_Postal_Code__c</fullName>
        <label>Primary Services Contact Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Contact_State_Province__c</fullName>
        <label>Primary Services Contact State/Province</label>
        <picklist>
            <controllingField>Services_Contact_Country__c</controllingField>
            <picklistValues>
                <fullName>AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Services_Contact_Title__c</fullName>
        <label>Primary Services Contact Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Svs_Installation_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Svs-Installation Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Svs_Maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Svs-Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Svs_Network_Design_Planning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Svs-Network Design &amp; Planning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Svs_Project_Mgmt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Svs-Project Mgmt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Svs_Site_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Svs-Site Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Svs_Spectrum_surveys_planning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Svs-Spectrum surveys &amp; planning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Svs_Staging_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Svs-Staging Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Svs_Svs_Level_Agreements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Svs-Svs Level Agreements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Svs_System_Integration_Implementati__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Svs-Sys Integration Implementation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Svs_System_Integration_design_pla__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Svs-Sys Integration design/plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Svs_System_Optimization_Svs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Svs-System Optimization Svs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Svs_Tier_1_Support_basic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Svs-Tier 1 Support (basic)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Svs_Tier_2_Support_complex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Svs-Tier 2 Support (complex)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Svs_Training_Customer_Ops__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Svs-Training Customer Ops</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_Address_1__c</fullName>
        <label>Primary Technical Contact Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_Address_2__c</fullName>
        <label>Primary Technical Contact Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_City_Town__c</fullName>
        <label>Primary Technical Contact City / Town</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_Country__c</fullName>
        <label>Primary Technical Contact Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_Email__c</fullName>
        <label>Primary Technical Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_First_Name__c</fullName>
        <label>Primary Technical Contact First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_Last_Name__c</fullName>
        <label>Primary Technical Contact Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>